# indrachain-railway

./: .gitignore  Dockerfile  LICENSE  README.md  blockchain-simulation.js  docker-compose.yml  railway.toml  server.js
.github/workflows/: deploy.yml
scripts/: deploy.sh  health-check.sh
services/aa-processor/: Dockerfile
services/indracore-vm/: Dockerfile  cabal.project  indracore-vm.cabal
services/indracore-vm/app/: Main.hs
services/indracore-vm/app/CLI/: Options.hs
services/indracore-vm/scripts/: entrypoint.sh
services/indracore-vm/src/IndraCore/: API.hs  AccountAbstraction.hs  Config.hs  Consensus.hs  Crypto.hs  Ledger.hs  Monitoring.hs  Network.hs  Transaction.hs  Types.hs  UMPF.hs  Utils.hs  VM.hs
services/monitoring/: Dockerfile
services/monitoring/config/: alert_rules.yml  prometheus.yml
services/monitoring/dashboards/: indrachain-overview.json
services/umpf-analyzer/: Dockerfile
